# SimpleEventManager

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh
include/SimpleEventManager/: Event.h  Event.hpp  EventConsumptionInterface.hpp  EventRaiserInterface.hpp  EventSourceManagerInterface.hpp  SimpleEventManager.hpp
src/: CMakeLists.txt  Event.cpp  EventConsumerHandler.cpp  EventConsumerHandler.hpp  EventRaiser.cpp  EventRaiser.hpp  SimpleEventManager.cpp  SimpleEventManagerImp.cpp  SimpleEventManagerImp.hpp
tests/: CMakeLists.txt  MyEvent.cpp  MyEvent.hpp  TestEventConsumer.cpp  TestEventConsumer.hpp  TestEventRaiser.cpp  TestEventRaiser.hpp  testSEM.cpp
